# Qryptcoin

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml  requirements-coverage.txt
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml  coverage.yml  deploy.yml  fuzz.yml  sbom.yml  scorecard.yml  semgrep.yml  trivy.yml
docs/: audit-checklist.md  build.md  dev.md  payment_codes.md  protocol.md  release-notes-v1.0.1.md  release.md  testing.md  verify.md
docs/security/: README.md  fuzzing.md  incident-response-plan.md  sbom.md  threat-model.md
explorer/: docker-compose.yml  ui-patch.js
include/: README.md
scripts/release/: make-linux-release.sh  sign-checksums.sh
src/config/: network.hpp
src/consensus/: block_hash.cpp  block_hash.hpp  block_validator.cpp  block_validator.hpp  block_weight.cpp  block_weight.hpp  monetary.cpp  monetary.hpp  params.cpp  params.hpp  pow.cpp  pow.hpp  revealed_pubkeys.cpp  revealed_pubkeys.hpp  sighash.cpp  sighash.hpp  sparse_merkle_tree.cpp  sparse_merkle_tree.hpp  tx_validator.cpp  tx_validator.hpp  utxo.cpp  utxo.hpp  versionbits.cpp  versionbits.hpp  witness_commitment.hpp
src/crypto/: bech32.cpp  bech32.hpp  crypto_suite.cpp  crypto_suite.hpp  deterministic_rng.cpp  deterministic_rng.hpp  dilithium_randombytes.cpp  hash.cpp  hash.hpp  mnemonic.cpp  mnemonic.hpp  mnemonic_wordlist_en.hpp  p2qh_address.cpp  p2qh_address.hpp  p2qh_descriptor.cpp  p2qh_descriptor.hpp  payment_code.cpp  payment_code.hpp  payment_code_short.cpp  payment_code_short.hpp  pq_engine.cpp  pq_engine.hpp  pq_params.hpp  stealth_address.cpp  stealth_address.hpp
src/net/: README.md  addr_manager.cpp  addr_manager.hpp  channel.cpp  channel.hpp  dns_seeds.cpp  dns_seeds.hpp  encrypted_channel.cpp  encrypted_channel.hpp  handshake.cpp  handshake.hpp  messages.cpp  messages.hpp  peer_manager.cpp  peer_manager.hpp  peer_session.cpp  peer_session.hpp  socket.cpp  socket.hpp  time_adjuster.cpp  time_adjuster.hpp  transport_auth.cpp  transport_auth.hpp  upnp.cpp  upnp.hpp
src/node/: block_builder.cpp  block_builder.hpp  block_sync.cpp  block_sync.hpp  chain_state.cpp  chain_state.hpp  chain_work.hpp  mining_extranonce.cpp  mining_extranonce.hpp  qryptd.cpp
src/node/config/: build_info.hpp.in  network.cpp  network.hpp
src/node/rpc/: README.md  http_server.cpp  http_server.hpp  server.cpp  server.hpp
src/node/storage/: block_store.cpp  block_store.hpp  revealed_pubkeys_snapshot.cpp  revealed_pubkeys_snapshot.hpp  tx_fee_snapshot.cpp  tx_fee_snapshot.hpp  utxo_snapshot.cpp  utxo_snapshot.hpp
src/tx/policy/: fee_estimator.cpp  fee_estimator.hpp  standardness.cpp  standardness.hpp
src/tx/primitives/: amount.hpp  block.hpp  hash.hpp  merkle.cpp  merkle.hpp  serialize.cpp  serialize.hpp  transaction.hpp  txid.cpp  txid.hpp
src/tx/script/: l2_anchor.cpp  l2_anchor.hpp  p2qh.cpp  p2qh.hpp  script.cpp  script.hpp
src/util/: aead.cpp  aead.hpp  argon2_kdf.cpp  argon2_kdf.hpp  atomic_file.cpp  atomic_file.hpp  base64.cpp  base64.hpp  csprng.cpp  csprng.hpp  eta.cpp  eta.hpp  hex.cpp  hex.hpp  pbkdf2.cpp  pbkdf2.hpp  secure_wipe.cpp  secure_wipe.hpp  system.cpp  system.hpp
src/wallet/: hd_wallet.cpp  hd_wallet.hpp  wallet_context.cpp  wallet_context.hpp
tests/fuzz/: net_message_decode_fuzzer.cpp  tx_block_deserialize_fuzzer.cpp
tests/integration/node/: chain_state_persistence_tests.cpp  chain_state_scalability_tests.cpp  tx_fee_snapshot_reorg_tests.cpp  tx_relay_shaping_tests.cpp
tests/integration/rpc/: commit_delay_tests.cpp  http_server_tests.cpp  mempool_rbf_tests.cpp  mempool_spent_utxo_sync_tests.cpp  missing_utxo_prune_tests.cpp  wallet_disabled_tests.cpp  wallet_rescan_tests.cpp  wallet_rpc_tests.cpp
tests/node/: block_sync_stall_detection_tests.cpp  header_sync_backpressure_tests.cpp  rate_limiter_correctness_tests.cpp  scheduler_deadlock_tests.cpp  sync_stall_recovery_tests.cpp
tests/unit/consensus/: block_hash_tests.cpp  block_template_difficulty_tests.cpp  block_validator_tests.cpp  compact_target_tests.cpp  difficulty_tests.cpp  extranonce_tests.cpp  genesis_tests.cpp  micro_fork_tests.cpp  sighash_tests.cpp  sparse_merkle_tree_tests.cpp  standardness_tests.cpp  tx_validator_tests.cpp  versionbits_tests.cpp  weight_tests.cpp
tests/unit/crypto/: kat_values.hpp  payment_code_short_id_tests.cpp  payment_code_v2_tests.cpp  pq_kat_tests.cpp  rng_isolation_tests.cpp
tests/unit/net/: addr_manager_tests.cpp  authenticated_transport_tests.cpp  encrypted_channel_tests.cpp  encrypted_payload_tests.cpp  handshake_tests.cpp  message_tests.cpp  peer_manager_tests.cpp  time_adjuster_tests.cpp
tests/unit/policy/: fee_estimator_tests.cpp
tests/unit/primitives/: varint_tests.cpp
tests/unit/script/: p2qh_script_tests.cpp
tests/unit/util/: deterministic_rng.hpp  eta_tests.cpp
tests/unit/wallet/: hd_wallet_tests.cpp  legacy_wallet_tests.cpp  wallet_format_v2_tests.cpp
tools/: qrypt_cli.cpp  qrypt_payresolver.cpp
